--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -19,4 +19,13 @@
     </tbody>
 </table>
 
+<!--메인화면-->
+<a href="/articles" class="btn btn-primary">Go to Article List</a>
+
+<!--새로운 글쓰기-->
+<a href="/articles/new" class="btn btn-primary">New Article</a>
+
+<!--수정-->
+<a href="/articles/{{article.id}}/edit" class="btn btn-primary">Edit</a>
+
 {{>layouts/footer}}
