--- a/src/main/resources/templates/articles/edit.mustache
+++ b/src/main/resources/templates/articles/edit.mustache
@@ -1,18 +1,22 @@
 {{>layouts/header}}
 
-<form class="container" action="/articles/create" method="post">
+<form class="container" action="/articles/update" method="post">
+
+    <!--히든-->
+    <input name="id" type="hidden" value="{{id}}"/>
+
     <div class="mb-3">
         <label class="form-label">제목</label>
-        <input type="text" class="form-control" name="title">
+        <input type="text" class="form-control" name="title" value="{{article.title}}">
         <!-- input태그의 핵심: name을 설정해줘야 넘어간다
              중요한점은 dto의 필드변수명이랑 동일하게 작성해야 된다는 것이다. -->
     </div>
     <div class="mb-3">
         <label class="form-label">내용</label>
-        <textarea class="form-control" rows="3" name="content"></textarea>
+        <textarea class="form-control" rows="3" name="content">{{article.content}}</textarea>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
-    <a href="/articles" class="btn btn-primary">Back</a>
+    <a href="/articles/{{article.id}}" class="btn btn-primary">Back</a>
 </form>
 
 {{>layouts/footer}}
