--- a/src/main/resources/templates/articles/index.mustache
+++ b/src/main/resources/templates/articles/index.mustache
@@ -12,7 +12,7 @@
     {{#articleList}}
         <tr>
             <th>{{id}}</th>
-            <td><a href="/articles/{{id}}"></a>{{title}}</td>
+            <td><a href="/articles/{{id}}">{{title}}</a></td>
             <td>{{content}}</td>
         </tr>
     {{/articleList}}
