--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -28,4 +28,7 @@
 <!--수정-->
 <a href="/articles/{{article.id}}/edit" class="btn btn-primary">Edit</a>
 
+<!--삭제-->
+<a href="/articles/{{article.id}}/delete" class="btn btn-danger">Delete</a>
+
 {{>layouts/footer}}
