feat : (jpa) JPA 로깅 설정

--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -20,7 +20,7 @@
 </table>
 
 <!--메인화면-->
-<a href="/articles" class="btn btn-primary">Go to Article List</a>
+<a href="/articles" class="btn btn-primary">Article List</a>
 
 <!--새로운 글쓰기-->
 <a href="/articles/new" class="btn btn-primary">New Article</a>
